Commit 2 - adding release.yml
Signed-off-by: mposolda <mposolda@gmail.com>

--- a/.github/workflows/release-nightly.yml
+++ b/.github/workflows/release-nightly.yml
@@ -15,5 +15,6 @@ jobs:
       gh-org: mposolda
       branch: main
       tag: nightly
+      set-versions: false
     secrets:
       GH_TOKEN: ${{ secrets.GH_TOKEN }}
