--- a/.github/workflows/x-release.yml
+++ b/.github/workflows/x-release.yml
@@ -12,6 +12,9 @@ on:
       tag:
         required: true
         type: string
+      set-versions:
+        required: true
+        type: boolean
     secrets:
       GH_TOKEN:
         required: true
@@ -34,4 +37,36 @@ jobs:
           echo "Github organization: ${{ inputs.gh-org }}  " >> $GITHUB_STEP_SUMMARY
           echo "Branch: ${{ inputs.branch }}  " >> $GITHUB_STEP_SUMMARY
           echo "Target tag: ${{ inputs.tag }}  " >> $GITHUB_STEP_SUMMARY
-          echo "Ref: ${{ github.ref }}  " >> $GITHUB_STEP_SUMMARY
+          echo "Set versions: ${{ inputs.set-versions }}  " >> $GITHUB_STEP_SUMMARY
+
+  release-impl:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+#          repository: "${{ inputs.gh-org }}/keycloak-nodejs-connect"
+#          token: ${{ secrets.GH_TOKEN }}
+          ref: ${{ inputs.branch }}
+
+      - name: Create version commit
+        if: inputs.set-versions
+        run: |
+          ./set-version.sh ${{ inputs.tag }}
+          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "github-actions[bot]"
+          git commit -a -m "Set version to ${{ inputs.tag }}"
+
+      - name: Tag commit
+        run: git tag --force ${{ inputs.tag }}
+
+      - name: Push changes
+        run: git push --force origin refs/tags/${{ inputs.tag }}
+
+  show-output:
+    name: Show Output
+    runs-on: ubuntu-latest
+    needs: [release-impl]
+    steps:
+      - run: |
+          echo "https://github.com/${{ inputs.gh-org }}/keycloak-nodejs-connect/tree/${{ inputs.tag }}  " >> $GITHUB_STEP_SUMMARY        
