Commit 3 - gh-release step
Signed-off-by: mposolda <mposolda@gmail.com>

--- a/.github/workflows/release-nightly.yml
+++ b/.github/workflows/release-nightly.yml
@@ -15,6 +15,6 @@ jobs:
       gh-org: mposolda
       branch: main
       tag: nightly
-      set-versions: false
+      nightly: true
     secrets:
       GH_TOKEN: ${{ secrets.GH_TOKEN }}
