--- a/.github/workflows/x-release.yml
+++ b/.github/workflows/x-release.yml
@@ -82,11 +82,53 @@ jobs:
         if: env.release-exists == 'false'
         run: gh release create ${{ inputs.tag }} --repo ${{ inputs.gh-org }}/keycloak-nodejs-connect --title ${{ inputs.tag }} --draft ${{ inputs.nightly && '--prerelease' || '' }}
 
+  release-on-github:
+    runs-on: ubuntu-latest
+    needs: [create-gh-releases]
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+#          repository: ${{ inputs.gh-org }}/keycloak-nodejs-connect
+#          token: ${{ secrets.GH_TOKEN }}
+          ref: ${{ inputs.tag }}
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+          check-latest: true
+          cache: npm
+
+      - name: Create package tarball
+        run: |
+          npm pack
+          mv -T *.tgz keycloak-nodejs-connect.tgz
+
+      - name: Upload to GitHub Releases
+        run: |
+          for i in `gh release view ${{ inputs.tag }} --json assets --jq '.assets[].name'`; do 
+            test -f $i || gh release delete-asset ${{ inputs.tag }} $i -y
+          done
+          gh release upload ${{ inputs.tag }} keycloak-nodejs-connect.tgz --clobber
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+
+  publish-gh-release:
+    runs-on: ubuntu-latest
+    needs: [release-on-github]
+    steps:
+      - name: Publish release
+        run: gh release edit ${{ inputs.tag }} --repo ${{ inputs.gh-org }}/keycloak-nodejs-connect --draft=false
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+
 
   show-output:
     name: Show Output
     runs-on: ubuntu-latest
-    needs: [create-tags,create-gh-releases]
+    needs: [create-tags,publish-gh-release]
     steps:
       - run: |
-          echo "https://github.com/${{ inputs.gh-org }}/keycloak-nodejs-connect/tree/${{ inputs.tag }}  " >> $GITHUB_STEP_SUMMARY        
+          echo "https://github.com/${{ inputs.gh-org }}/keycloak-nodejs-connect/tree/${{ inputs.tag }}  " >> $GITHUB_STEP_SUMMARY
+          echo "https://github.com/${{ inputs.gh-org }}/keycloak-nodejs-connect/releases/tag/${{ inputs.tag }}  " >> $GITHUB_STEP_SUMMARY
