--- a/.github/workflows/x-release.yml
+++ b/.github/workflows/x-release.yml
@@ -89,8 +89,6 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-#          repository: ${{ inputs.gh-org }}/keycloak-nodejs-connect
-#          token: ${{ secrets.GH_TOKEN }}
           ref: ${{ inputs.tag }}
 
       - name: Setup Node.js
@@ -122,6 +120,28 @@ jobs:
         run: gh release edit ${{ inputs.tag }} --repo ${{ inputs.gh-org }}/keycloak-nodejs-connect --draft=false
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
+
+  publish-npm:
+    runs-on: ubuntu-latest
+    needs: [release-on-github]
+    if: ${{ !inputs.nightly }}
+    steps:
+      - name: Download archive
+        run: gh release download ${{ inputs.tag }} --repo ${{ inputs.gh-org }}/keycloak-nodejs-connect --pattern 'keycloak-nodejs-connect.tgz'
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+          check-latest: true
+          registry-url: https://registry.npmjs.org
+
+      - name: Publish to NPM
+        run: npm publish keycloak-nodejs-connect.tgz --access public --ignore-scripts ${{ inputs.gh-org != 'keycloak' && ' --dry-run' || '' }}
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
 
   show-output:
