--- a/.github/workflows/x-release.yml
+++ b/.github/workflows/x-release.yml
@@ -50,7 +50,7 @@ jobs:
         if: ${{ !inputs.nightly }}
         run: |
           ./set-version.sh ${{ inputs.tag }}
-          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git config --global user.name "github-actions[bot]"
           git commit -a -m "Set version to ${{ inputs.tag }}"
 
@@ -93,9 +93,8 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version: 22
           check-latest: true
-          cache: npm
 
       - name: Create package tarball
         run: |
@@ -133,7 +132,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version: 22
           check-latest: true
           registry-url: https://registry.npmjs.org
 
