--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,7 @@ jobs:
     name: Release
     uses: ./.github/workflows/x-release.yml
     with:
-      gh-org: keycloak
+      gh-org: mposolda # TODO:mposolda
       branch: ${{ github.ref_name }}
       tag: ${{ inputs.version }}
       nightly: false
