Avoid doing 2nd checkout. Merge publish-gh-release step to release-impl
Signed-off-by: mposolda <mposolda@gmail.com>

--- a/.github/workflows/x-release.yml
+++ b/.github/workflows/x-release.yml
@@ -70,15 +70,9 @@ jobs:
             fi
           )" >> $GITHUB_ENV
 
-      - name: Create a release
+      - name: Create a github release
         if: env.release-exists == 'false'
         run: gh release create ${{ inputs.tag }} --repo ${{ inputs.gh-org }}/keycloak-nodejs-connect --title ${{ inputs.tag }} --draft ${{ inputs.nightly && '--prerelease' || '' }}
-
-      # TODO:mposolda is this needed?
-      - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          ref: ${{ inputs.tag }}
 
       - name: Create package tarball
         run: |
@@ -94,10 +88,6 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
 
-  publish-gh-release:
-    runs-on: ubuntu-latest
-    needs: [release-impl]
-    steps:
       - name: Publish release
         run: gh release edit ${{ inputs.tag }} --repo ${{ inputs.gh-org }}/keycloak-nodejs-connect --draft=false
         env:
@@ -129,7 +119,7 @@ jobs:
   show-output:
     name: Show Output
     runs-on: ubuntu-latest
-    needs: [release-impl,publish-gh-release]
+    needs: [release-impl]
     steps:
       - run: |
           echo "https://github.com/${{ inputs.gh-org }}/keycloak-nodejs-connect/tree/${{ inputs.tag }}  " >> $GITHUB_STEP_SUMMARY
