Github token - attempt 2
Signed-off-by: mposolda <mposolda@gmail.com>

--- a/.github/workflows/release-nightly.yml
+++ b/.github/workflows/release-nightly.yml
@@ -16,5 +16,5 @@ jobs:
       branch: ${{ github.ref_name }}
       tag: nightly
       nightly: true
-    secrets:
-      GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#    secrets:
+#      GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
